<resources>
    <string name="app_name">Young Money</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_locations">View Locations</string>
    <string name="action_log_out">Log Out</string>
    <string name="action_map">View Map</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is incorrect</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing username
        completions."
    </string>

    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="locations_title">Locations</string>
    <string name="title_activity_new_donation">New Donation</string>
    <string name="title_activity_donation_detail">DonationDetailActivity</string>
    <string name="search_all_donations">Search All Locations</string>
    <string name="title_activity_maps">Map</string>

    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">203313097252393</string>
    <string name="fb_login_protocol_scheme">fb203313097252393</string>

</resources>
